take explicit number format before implicit number format, fdo#47084

Follow-up to fdo#43467